--- a/readme
+++ b/readme
@@ -1,3 +1,4 @@
 here is a read me file for all user
 add an extra line!
 this line is modified in dev branch
+haha here we can se there are some conflicts!
