modified in dev

--- a/readme
+++ b/readme
@@ -4,3 +4,4 @@ this line is modified in dev branch
 haha here we can se there are some conflicts!
 create a new branch in feature1
 now we are together!
+add one line in dev branch
