stash content commit

--- a/readme
+++ b/readme
@@ -5,3 +5,5 @@ haha here we can se there are some conflicts!
 create a new branch in feature1
 now we are together!
 add one line in dev branch
+test stash
+test stash2
